# armadillo-code

./: .travis.yml  CMakeLists.txt  docs.html
include/: armadillo
include/armadillo_bits/: arma_version.hpp  fn_log_det.hpp  fn_range.hpp  fn_symmat.hpp  fn_trimat.hpp  op_range_bones.hpp  op_range_meat.hpp  running_stat_bones.hpp  running_stat_meat.hpp  running_stat_vec_bones.hpp  running_stat_vec_meat.hpp  spop_symmat_bones.hpp  spop_symmat_meat.hpp  spop_trimat_bones.hpp  spop_trimat_meat.hpp
tests/: CMakeLists.txt  main_coverage.cpp
